[package]
name = "tree-house"
description = "A robust and cozy highlighter library for tree-sitter"
authors = [
  "Pascal Kuthe <pascalkuthe@pm.me>",
  "Michael Davis <mcarsondavis@gmail.com>"
]
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/NikoMalik/tree-house"
readme = "../README.md"
rust-version = "1.82.0"

[features]
default = ["fixtures"]
fixtures = ["dep:unicode-width", "dep:pretty_assertions"]

[dependencies]
small-map = "0.1.4"
# ropey = { version = "1.6", default-features = false, features = ["simd"] }
ropey = { version = "2.0.0-alpha.3", features = ["metric_lines_lf_cr", "simd"] }
arc-swap = "1"
hashbrown = { version = "0.16",feuatures=["allocator-api2"] }
regex = "1"
# regex-cursor = "0.1"
regex-cursor = { git="https://github.com/cessen/regex-cursor.git" , branch="ropey2", features=["ropey2"] }
slab = "0.4"
unicode-width = { version = "=0.1.12", optional = true }
pretty_assertions = { version = "1.4.0", optional = true }
kstring = "2.0"
smallvec = "1.15.1"


[dev-dependencies]
indexmap = "2.5.0"
skidder = { path = "../skidder" }

[dependencies.tree-sitter]
version = "0.2"
package = "tree-house-bindings"
path = "../bindings"
features = ["ropey2"]

[dependencies.once_cell]
version = "1.19"
default-features = false
features = ["std", "alloc"]
